@@ -1,6 +1,7 @@
 0.2.2 -> 0.2.3
 - Added instruction code in memory
 - Added instruction list (documentation)
+- Added instruction/RO memory protection against overwriting
 - Removed the legacy source parser
 - Improved readability in memory views
 - Fixed memory edition in GUI
